--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.8.1",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-camera": "^1.1.4",
-    "react-native-qrcode-scanner": "^1.0.1"
+    "react-native-qrcode-scanner": "^1.0.1",
+    "react-native-router-flux": "^4.0.5"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
