--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-native": "0.54.2",
     "react-native-app-intro": "https://github.com/merryjs/react-native-app-intro",
     "react-native-camera": "^1.1.4",
+    "react-native-collapsible-toolbar": "^0.1.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-img-cache": "^1.5.3",
     "react-native-link": "^4.1.0",
     "react-native-qrcode-scanner": "^1.0.1",
+    "react-native-render-html": "^3.10.0",
     "react-native-router-flux": "^4.0.5",
     "react-native-snap-carousel": "^3.7.5"
   },
